fixed su-profile data update to update profile and suIndex locations

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -177,7 +177,7 @@
         margin-top:25px;
       }
       .toolbarLeft{
-        width:50%;
+        width:30%;
         display:inline-flex;
         flex-direction:row;
       }
@@ -188,11 +188,14 @@
         margin-left:5%;
       }
       .toolbarRight{
-        width:50%;
+        width:70%;
         text-align:right;
       }
       .toolbarRight *{
         margin-right:5%;
+      }
+      .toolbarRight #notifyDropDown{
+        margin-right:1%;
       }
       #notifyBadge{
         --paper-badge-width:20px;
