--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -28,4 +28,5 @@
 <link rel="import" href="../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../bower_components/paper-menu-button/paper-menu-button.html" />
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html" />
+<link rel="import" href="../bower_components/iron-collapse/iron-collapse.html" />
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
