--- a/src/pages/default/def-login/dependencies.html
+++ b/src/pages/default/def-login/dependencies.html
@@ -4,3 +4,5 @@
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
+<link rel="import" href="../../../../bower_components/polymerfire/firebase-auth.html" />
+<link rel="import" href="../../../../bower_components/iron-collapse/iron-collapse.html" />
